<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/action_edit"
        android:title="@string/action_search"
        android:orderInCategory="80"
        android:icon="@mipmap/btn_home_publish_nor"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_share"
        android:title="@string/action_share"
        android:orderInCategory="90"
        android:icon="@mipmap/btn_home_notice_nor"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_settings1"
        android:title="@string/action_refresh"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item android:id="@+id/action_settings2"
        android:title="@string/night_style"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item android:id="@+id/action_settings3"
        android:title="@string/setting"
        android:orderInCategory="100"
        app:showAsAction="never"/>

</menu>